test/error/arith/test-mod-real/p.pas
program test_mod_real;
var r:real;
begin
	r:=3.5;
	writeln(r mod 3);
end.
